[project]
name = "cognitive-agent-eag"
version = "0.1.0"
description = "Four-role cognitive agent for EAG V3 Assignment 6"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tavily-python>=0.3.0",
    "ddgs>=7.0.0",
    "crawl4ai>=0.4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
